# playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
assistants/: batch_completion.py  batch_infra.py  completion.py  edu_problems.py  mysqlutils.py  view_batch_status.py
assistants/analysis/: csv_to_json.py  filter_by_message_count.py
assistants/analysis/games/: analyze_interactive_games.py  games_clustering.py
assistants/chat/: run_with_history.py
assistants/chat/history/: hook_your_readers_haoyu_251022.txt  hook_your_readers_haoyu_251022_response.md
assistants/cosmo-intent/: analyze.py
crypto/: trans.py
csv_tools/: csv_extractor.py
vector/mteb/: convert_to_json.py  mteb_data_view.py
vector/vector_db/: brute_force_benchmark.py  chroma_benchmark.py  milvus_benchmark.py  spec.md
vector/vectorize/: gemini_multimodal_test.py  gemini_text_test.py  openai_test.py
voice_conv/: download_transcripts.py  extract_transcript_ids.py
