[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "datasets>=4.4.2",
    "google-cloud-aiplatform>=1.132.0",
    "google-genai>=1.56.0",
    "mteb>=2.4.2",
    "openai>=2.14.0",
    "pymilvus>=2.6.6",
    "requests>=2.32.5",
]
